# Fixed64-js

./: .gitattributes  .gitignore  README.md  fixed64-js.d.ts  package-lock.json  package.json  rename-mjs.cjs  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json
examples/: Fixed64Example.js  Fixed64Example.ts  package.json  tsconfig.json
examples/cjs/: Fixed64Example.js  Fixed64Example.ts  package-lock.json  package.json  tsconfig.json
examples/esm/: .parcelrc  Fixed64Example.js  Fixed64Example.ts  index.html  package-lock.json  package.json  tsconfig.json
examples/esm/.parcel-cache/: a6fe84cf8f85eec2-RequestGraph  e2ee32ca4831f87a-AssetGraph  snapshot-a6fe84cf8f85eec2.txt
src/cjs/: Fixed64.cjs.ts  Fixed64.ts  Fixed64WasmLoader.cjs.ts  NodeWasmLoader.ts  package-lock.json  package.json  tsconfig.json
src/cpp/: ArraySize.h  Bindings.cpp  CMakeLists.txt  FixLut.h  Fixed64.h  Fixed64Wrapper.cpp  Fixed64Wrapper.h  FixedMath.h  Interop.cpp  Rect.cpp  Rect.h  Sector.h  Vector2.h  Vector3.cpp  Vector3.h  build.bat
src/cpp/include/: ArraySize.h  Fixed64.h  Fixed64Native.h  Fixed64Wrapper.h  FixedMath.h  Interop.h  Rect.h  Sector.h  Vector2.h  Vector3.h
src/cpp/src/: Bindings.cpp  Fixed64Native.cpp  Interop.cpp  Rect.cpp  Sector.cpp  Vector2.cpp  Vector3.cpp
src/esm/: Fixed64.esm.ts  Fixed64.ts  Fixed64WasmLoader.esm.ts  NodeWasmLoader.ts  WebWasmLoader.ts  package.json  tsconfig.json
src/ts/: Fixed64.js  Fixed64.ts  Fixed64WasmLoader.js  Fixed64WasmLoader.ts
tools/cmake/: README.txt
tools/cmake/doc/cmake/: CMake.qch
